--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 script:
 - |
-  git config user.email "$GITHUB_EMAIL"
+  git config user.email "${GITHUB_EMAIL}"
   git config user.name "Cheukting"
   git remote remove origin
-  git remote add origin https://$GITHUB_API_KEY@github.com/terminusdb/terminusdb-client-python-wiki.git > /dev/null 2>&1
-  git remote add upstream https://$GITHUB_API_KEY@github.com/terminusdb/terminusdb-client-python.wiki.git > /dev/null 2>&1
+  git remote add origin https://${GITHUB_API_KEY}@github.com/terminusdb/terminusdb-client-python-wiki.git > /dev/null 2>&1
+  git remote add upstream https://${GITHUB_API_KEY}@github.com/terminusdb/terminusdb-client-python.wiki.git > /dev/null 2>&1
   git fetch origin
   git fetch upstream
   git merge upstream/master --no-edit
