--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
-script:
-- |
-  git config user.email "${GITHUB_EMAIL}"
-  git config user.name "Cheukting"
-  git remote remove origin
-  git remote add origin https://${GITHUB_API_KEY}@github.com/terminusdb/terminusdb-client-python-wiki.git > /dev/null 2>&1
-  git remote add upstream https://${GITHUB_API_KEY}@github.com/terminusdb/terminusdb-client-python.wiki.git > /dev/null 2>&1
-  git fetch origin
-  git fetch upstream
-  git merge upstream/master --no-edit
-  git push origin HEAD:master > /dev/null 2>&1
-  git push upstream HEAD:master > /dev/null 2>&1
+script: ./scripts/cibuild
+exclude: [vendor]
+sudo: false
+
+# script:
+# - |
+#   git config user.email "$GITHUB_EMAIL"
+#   git config user.name "Cheukting"
+#   git remote remove origin
+#   git remote add origin https://${GITHUB_API_KEY}@github.com/terminusdb/terminusdb-client-python-wiki.git > /dev/null 2>&1
+#   git remote add upstream https://${GITHUB_API_KEY}@github.com/terminusdb/terminusdb-client-python.wiki.git > /dev/null 2>&1
+#   git fetch origin
+#   git fetch upstream
+#   git merge upstream/master --no-edit
+#   git push origin HEAD:master > /dev/null 2>&1
+#   git push upstream HEAD:master > /dev/null 2>&1
